--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,3 +1,3 @@
 <h2>Hello. 秋ちゃんなのです～</h2>
-<p><img src="tamyiuchau.github.io/img/mememe.jpg" alt="Tam Yiu Chau" title="Tam Yiu Chau"  class="img-rounded floatLeft" />
+<p><img src="{{site.baseurl}}/img/MeMeMe.jpg" alt="Tam Yiu Chau" title="Tam Yiu Chau"  class="img-rounded floatLeft" />
 一人でもできる！Team workは面倒せい。。。</p>
